--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
-project(MyProject)
-
-set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/g++-13")
-set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -O3 -fopenmp -march=native -funroll-loops -ffast-math -flto -Wl,-w")
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(${CMAKE_SOURCE_DIR})
-
-file(GLOB_RECURSE EULER_SOURCES "euler/*.cc")
-add_library(euler ${EULER_SOURCES})
-
-add_library(fractions fractions/fractions.cpp)
-add_library(math math/math.cpp)
-add_library(stopwatch stopwatch/stopwatch.cpp)
-
-add_executable(main main.cpp)
-target_link_libraries(main euler fractions math stopwatch)
+add_subdirectory(euler)
+add_subdirectory(fractions)
+add_subdirectory(math)
+add_subdirectory(pythonlike)
+add_subdirectory(stopwatch)
