--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB_RECURSE EULER_SOURCES "*.cc")
+file(GLOB_RECURSE EULER_SOURCES "*.cpp")
 add_library(euler ${EULER_SOURCES})
 target_include_directories(euler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
