--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(math math.cpp)
+file(GLOB_RECURSE MATH_SOURCES "*.cpp")
+add_library(math ${MATH_SOURCES})
 target_include_directories(math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
