--- a/stopwatch/CMakeLists.txt
+++ b/stopwatch/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(stopwatch stopwatch.cpp)
+add_library(stopwatch profile.cpp stopwatch.cpp time.cpp)
 target_include_directories(stopwatch PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
