make more general

--- a/stopwatch/CMakeLists.txt
+++ b/stopwatch/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(stopwatch profile.cpp stopwatch.cpp time.cpp)
+file(GLOB STOPWATCH_SOURCES "*.cpp")
+add_library(stopwatch ${STOPWATCH_SOURCES})
 target_include_directories(stopwatch PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
