--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(../euler euler)
 add_subdirectory(../fractions fractions)
 add_subdirectory(../math math)
 add_subdirectory(../stopwatch stopwatch)
+add_subdirectory(../utility utility)
 
 add_executable(tests tests.cpp)
-target_link_libraries(tests euler fractions math stopwatch)
+target_link_libraries(tests euler fractions math stopwatch utility)
