move to combinatorics

--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(GLOB EULER_SOURCES "*.cpp")
 file(GLOB PRIMETOOLS_SOURCES "primetools/*.cpp")
-add_library(euler ${EULER_SOURCES} ${PRIMETOOLS_SOURCES})
+file(GLOB COMBINATORICS_SOURCES "combinatorics/*.cpp")
+add_library(euler ${EULER_SOURCES} ${COMBINATORICS_SOURCES} ${PRIMETOOLS_SOURCES})
 target_include_directories(euler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
