--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -1,5 +1,3 @@
-file(GLOB EULER_SOURCES "*.cpp")
-file(GLOB PRIMETOOLS_SOURCES "primetools/*.cpp")
-file(GLOB COMBINATORICS_SOURCES "combinatorics/*.cpp")
-add_library(euler ${EULER_SOURCES} ${COMBINATORICS_SOURCES} ${PRIMETOOLS_SOURCES})
+file(GLOB_RECURSE EULER_SOURCES "*.cpp")
+add_library(euler ${EULER_SOURCES})
 target_include_directories(euler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
