--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(euler)
+add_subdirectory(fileio)
 add_subdirectory(fractions)
 add_subdirectory(math)
 add_subdirectory(pythonlike)
@@ -16,7 +17,7 @@ add_subdirectory(stopwatch)
 add_subdirectory(utility)
 
 # Install the libraries.
-install(TARGETS euler fractions math stopwatch utility ARCHIVE DESTINATION /usr/local/lib)
+install(TARGETS euler fileio fractions math stopwatch utility ARCHIVE DESTINATION /usr/local/lib)
 
 # Install the header files (avoid annoying includes in the header files (.cpp is fine)).
-install(DIRECTORY euler/ fractions/ math/ pythonlike/ stopwatch/ utility/ DESTINATION /usr/local/include/cpplib FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY euler/ fileio/ fractions/ math/ pythonlike/ stopwatch/ utility/ DESTINATION /usr/local/include/cpplib FILES_MATCHING PATTERN "*.h")
