--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,9 @@
         "random": "cpp",
         "utility": "cpp",
         "ranges": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "__tree": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     }
 }
