do not use GLOB or GLOB_RECURSE because CMake cannot detect when a new file is added

--- a/fileio/CMakeLists.txt
+++ b/fileio/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_library(fileio fileio.cpp)
+set(FILEIO_SOURCES
+    fileio.cpp
+)
+
+add_library(fileio ${FILEIO_SOURCES})
 target_include_directories(fileio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
