--- a/fractions/CMakeLists.txt
+++ b/fractions/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_library(fractions fractions.cpp)
+set (FRACTIONS_SOURCES
+    fractions.cpp
+)
+
+add_library(fractions ${FRACTIONS_SOURCES})
 target_include_directories(fractions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
