--- a/stopwatch/CMakeLists.txt
+++ b/stopwatch/CMakeLists.txt
@@ -1,3 +1,9 @@
-file(GLOB STOPWATCH_SOURCES "*.cpp")
+set (STOPWATCH_SOURCES
+    format.cpp
+    profile.cpp
+    sleep.cpp
+    stopwatch.cpp
+)
+
 add_library(stopwatch ${STOPWATCH_SOURCES})
 target_include_directories(stopwatch PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
