--- a/pythonlike/CMakeLists.txt
+++ b/pythonlike/CMakeLists.txt
@@ -1,2 +1,5 @@
+set (PYTHONLIKE_SOURCES
+)
+
 add_library(pythonlike INTERFACE)
 target_include_directories(pythonlike INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
