--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -1,2 +1,5 @@
+set (UTILITY_SOURCES
+)
+
 add_library(utility INTERFACE)
 target_include_directories(utility INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
