--- a/fileio/CMakeLists.txt
+++ b/fileio/CMakeLists.txt
@@ -4,3 +4,5 @@ set(FILEIO_SOURCES
 
 add_library(fileio ${FILEIO_SOURCES})
 target_include_directories(fileio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(fileio)
