--- a/fractions/CMakeLists.txt
+++ b/fractions/CMakeLists.txt
@@ -4,3 +4,5 @@ set (FRACTIONS_SOURCES
 
 add_library(fractions ${FRACTIONS_SOURCES})
 target_include_directories(fractions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(fractions math)
