--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,31 +19,31 @@ add_subdirectory(../utility utility)
 
 # EULER
 add_executable(test_euler test_euler.cpp)
-target_link_libraries(test_euler fileio fractions math stopwatch utility)
+target_link_libraries(test_euler euler)
 
 # FILEIO
 add_executable(test_fileio test_fileio.cpp)
-target_link_libraries(test_fileio fileio fractions math stopwatch utility)
+target_link_libraries(test_fileio fileio)
 
 # FRACTIONS
 add_executable(test_fractions test_fractions.cpp)
-target_link_libraries(test_fractions fileio fractions math stopwatch utility)
+target_link_libraries(test_fractions fractions)
 
 # MATH
 add_executable(test_math test_math.cpp)
-target_link_libraries(test_math fileio fractions math stopwatch utility)
+target_link_libraries(test_math math)
 
 # PYTHONLIKE
 add_executable(test_pythonlike test_pythonlike.cpp)
-target_link_libraries(test_pythonlike fileio fractions math stopwatch utility)
+target_link_libraries(test_pythonlike) # add pythonlike explicitly if no-longer only an interface lib.
 
 # STOPWATCH
 add_executable(test_stopwatch test_stopwatch.cpp)
-target_link_libraries(test_stopwatch euler fileio fractions math stopwatch utility)
+target_link_libraries(test_stopwatch stopwatch)
 
 # UTILITY
 add_executable(test_utility test_utility.cpp)
-target_link_libraries(test_utility fileio fractions math stopwatch utility)
+target_link_libraries(test_utility) # add utility explicitly if no-longer only an interface lib.
 
 # MAIN TESTS
 add_executable(test_main test_main.cpp)
