--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -12,3 +12,5 @@ set (MATH_SOURCES
 
 add_library(math ${MATH_SOURCES})
 target_include_directories(math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(math)
