--- a/stopwatch/CMakeLists.txt
+++ b/stopwatch/CMakeLists.txt
@@ -7,3 +7,5 @@ set (STOPWATCH_SOURCES
 
 add_library(stopwatch ${STOPWATCH_SOURCES})
 target_include_directories(stopwatch PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(stopwatch math)
