--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_C_COMPILER "/opt/homebrew/bin/gcc-13")
 set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/g++-13")
 set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -O3 -fopenmp -march=native -funroll-loops -ffast-math -flto -Wl,-w")
 
 project(tests)
 
 option(DEBUG OFF)
+option(SINGLE, OFF)
+if(SINGLE)
+    add_definitions(-DSINGLE)
+    message("-- NOTE: will build cpplibs in single-precision.")
+endif()
 
 # set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 20)
