move continued fractions from euler to fractions
more natural for them to be there plus we fix the
relative include in the header.

--- a/fractions/CMakeLists.txt
+++ b/fractions/CMakeLists.txt
@@ -1,8 +1,9 @@
 set (FRACTIONS_SOURCES
     fractions.cpp
+    continued.cpp
 )
 
 add_library(fractions ${FRACTIONS_SOURCES})
 target_include_directories(fractions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(fractions math)
+target_link_libraries(fractions euler math)
