--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -1,7 +1,8 @@
 set (UTILITY_SOURCES
+    utility.cpp
 )
 
-add_library(utility INTERFACE)
-target_include_directories(utility INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(utility ${UTILITY_SOURCES})
+target_include_directories(utility PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(utility)
