update gcc-14 to gcc-15

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,9 @@
         "codecvt": "cpp",
         "execution": "cpp",
         "stack": "cpp",
-        "text_encoding": "cpp"
+        "text_encoding": "cpp",
+        "print": "cpp",
+        "coroutine": "cpp",
+        "generator": "cpp"
     }
 }
