framework for probability lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,12 @@ add_subdirectory(fileio)
 add_subdirectory(fractions)
 add_subdirectory(math)
 add_subdirectory(pythonlike)
+add_subdirectory(probability)
 add_subdirectory(stopwatch)
 add_subdirectory(utility)
 
 # Install the libraries.
-install(TARGETS euler fileio fractions math stopwatch utility ARCHIVE DESTINATION /usr/local/lib)
+install(TARGETS euler fileio fractions math probability stopwatch utility ARCHIVE DESTINATION /usr/local/lib)
 
 # Install the header files (avoid annoying includes in the header files (.cpp is fine)).
-install(DIRECTORY euler/ fileio/ fractions/ math/ pythonlike/ stopwatch/ utility/ DESTINATION /usr/local/include/cpplib FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY euler/ fileio/ fractions/ math/ pythonlike/ probability/ stopwatch/ utility/ DESTINATION /usr/local/include/cpplib FILES_MATCHING PATTERN "*.h")
